# headhunt-ai

./: .gitignore
app/: main.py
app/api/: resume.py  routes.py
backend/: alembic.ini  phase-4.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  resume.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  resume.py
backend/app/repositories/: __init__.py  resume_repository.py
backend/app/schemas/: analysis.py  resume.py
backend/app/services/: llm_service.py  pdf_parser.py  resume_service.py
backend/migrations/: env.py
backend/migrations/versions/: 021e2081954f_create_resumes_table.py
