[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.2",
    "google-genai>=2.10.0",
    "mistralai>=1.0.0",
    "openai>=1.0.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.49.0",
]
